--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "prisma": "^5.17.0"
+  }
 }
